# RCOS_Twinner

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  labels.semantic_kitti.yaml  pipeline.example.yaml
data/: README.md
docs/: architecture.md
scripts/: classify_projected_pointcloud.py  compare_projection.py  evaluate_segmentation.py  fuse_joint_segmentation.py  prepare_data.py  project_iphone_lidar.py  project_relative_photo.py  run_pipeline.py  run_point_model_inference.py  visualize_projection.py
src/joint_segmentation/: __init__.py  config.py  labels.py
src/joint_segmentation/classification/: __init__.py  projected_image.py
src/joint_segmentation/cli/: classify_projected_pointcloud.py  compare_projection.py  evaluate_segmentation.py  fuse_joint_segmentation.py  infer.py  project_iphone_lidar.py  project_relative_photo.py  run_pipeline.py  run_point_model_inference.py  train.py  visualize_projection.py
src/joint_segmentation/data/: __init__.py  dataset.py
src/joint_segmentation/evaluation/: __init__.py  segmentation_metrics.py
src/joint_segmentation/fusion/: __init__.py  joint_segmentation.py  weighted_vote.py
src/joint_segmentation/models/: __init__.py  open3d_randlanet.py  point_segmenter.py
tests/: test_config.py  test_end_to_end_pipeline.py  test_fusion.py  test_iphone_lidar_projection.py  test_joint_segmentation_fusion.py  test_label_map.py  test_open3d_randlanet.py  test_projected_image_classification.py  test_projection_visualization.py  test_relative_photo_projection.py  test_segmentation_metrics.py
(+9 files in other folders)
