[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joint-pointcloud-segmentation"
version = "0.1.0"
description = "Joint point cloud segmentation scaffold combining point models and image-projected labels."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
joint-seg-train = "joint_segmentation.cli.train:main"
joint-seg-infer = "joint_segmentation.cli.infer:main"
joint-seg-project-iphone = "joint_segmentation.cli.project_iphone_lidar:main"
joint-seg-visualize-projection = "joint_segmentation.cli.visualize_projection:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
